micronfig_macros/tests/sources/wrong_syntax_colon.stderr
error: expected identifier
 --> tests/sources/wrong_syntax_colon.rs:2:13
  |
2 |     GARASAUTO: ,
  |                ^

error[E0425]: cannot find function, tuple struct or tuple variant `GARASAUTO` in this scope
 --> tests/sources/wrong_syntax_colon.rs:7:19
  |
7 |     println!("{:?}", GARASAUTO())
  |                      ^^^^^^^^^ not found in this scope
