micronfig_macros/tests/sources/wrong_syntax_colon.rs
micronfig::config! {
	GARASAUTO: ,
}

fn main() {
	std::env::set_var("GARASAUTO", "garasauto");
	println!("{:#?}", GARASAUTO());
}
